--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
+		   	<groupId>commons-collections</groupId>
+		    <artifactId>commons-collections</artifactId>
+		    <version>3.2.1</version>
+		</dependency>
+		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.4</version>
@@ -59,7 +64,22 @@
 		    <groupId>com.google.collections</groupId>
 		    <artifactId>google-collections</artifactId>
 		    <version>1.0</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.sgroschupf</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>4.3.9.RELEASE</version>
+		</dependency>	
 	</dependencies>
 
 	<build>
