--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 		    <artifactId>google-collections</artifactId>
 		    <version>1.0</version>
 		</dependency>	
+                <dependency>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                    <version>23.0</version>
+                </dependency>
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
