--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 			<artifactId>spring-context</artifactId>
 			<version>4.3.9.RELEASE</version>
 		</dependency>	
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>2.9.0</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
