--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,12 @@
 			<artifactId>spring-context</artifactId>
 			<version>5.0.6.RELEASE</version>
 		</dependency>	
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>5.0.6.RELEASE</version>
+		    <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
