--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<cglib-nodep.version>2.1_3</cglib-nodep.version>
 		<junit.version>4.12</junit.version>
 		<slf4j.version>1.7.12</slf4j.version>
+		<springframework.version>5.0.6.RELEASE</springframework.version>
 	</properties>
 
 	<dependencies>
@@ -74,12 +75,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>5.0.6.RELEASE</version>
+			<version>${springframework.version}</version>
 		</dependency>	
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-test</artifactId>
-		    <version>5.0.6.RELEASE</version>
+		    <version>${springframework.version}</version>
 		    <scope>test</scope>
 		</dependency>
 	</dependencies>
