--- a/pattern-coding-thinking/pom.xml
+++ b/pattern-coding-thinking/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>com.jangz</groupId>
 			<artifactId>pattern-common</artifactId>
-			<version>0.0.1.SNAPSHOT</version>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
