--- a/pattern-tutor/pattern-tutor-syntax/pom.xml
+++ b/pattern-tutor/pattern-tutor-syntax/pom.xml
@@ -16,5 +16,10 @@
 			<artifactId>jedis</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.9</version>
+		</dependency>
 	</dependencies>
 </project>
