--- a/pattern-tutor/pattern-tutor-syntax/src/main/java/com/pattern/tutor/syntax/database/jdbc.properties
+++ b/pattern-tutor/pattern-tutor-syntax/src/main/java/com/pattern/tutor/syntax/database/jdbc.properties
@@ -1,4 +1,4 @@
-driverClassName=com.sybase.jdbc4.jdbc.SybDriver
-url=
-username=
-password=
+driverClassName=com.mysql.jdbc.Driver
+url=jdbc:mysql://120.92.33.218:60000/ks-manager-release
+username=ks_release
+password=cHra9yxyEOPepzBn
