resolve package structure.

--- a/pattern-design/pom.xml
+++ b/pattern-design/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.jangz</groupId>
+		<groupId>com.buildupchao</groupId>
 		<artifactId>pattern</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
@@ -13,9 +13,9 @@
 
 	<dependencies>
 		<dependency>
-            <groupId>com.netflix.hystrix</groupId>
-            <artifactId>hystrix-core</artifactId>
-            <version>1.5.2</version>
-        </dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-core</artifactId>
+			<version>1.5.2</version>
+		</dependency>
 	</dependencies>
 </project>
