--- a/pattern-common/pom.xml
+++ b/pattern-common/pom.xml
@@ -2,11 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.jangz</groupId>
+		<groupId>com.buildupchao</groupId>
 		<artifactId>pattern</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.jangz</groupId>
+	<groupId>com.buildupchao</groupId>
 	<artifactId>pattern-common</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
