--- a/pattern-tutor/pom.xml
+++ b/pattern-tutor/pom.xml
@@ -26,5 +26,6 @@
 		<module>pattern-tutor-netty</module>
 		<module>pattern-tutor-mysql</module>
 		<module>pattern-tutor-microservice</module>
+		<module>pattern-tutor-flink</module>
 	</modules>
 </project>
