--- a/pattern-common/pom.xml
+++ b/pattern-common/pom.xml
@@ -19,5 +19,10 @@
 		    <artifactId>mini-table</artifactId>
 		    <version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
 	</dependencies>
 </project>
