--- a/pattern-tutor/pattern-tutor-springmvc/pom.xml
+++ b/pattern-tutor/pattern-tutor-springmvc/pom.xml
@@ -51,5 +51,11 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.7.0</version>
+		</dependency>
 	</dependencies>
 </project>
