--- a/pattern-common/src/main/resources/log4j.properties
+++ b/pattern-common/src/main/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.appender.systemOut=org.apache.log4j.ConsoleAppender
 log4j.appender.systemOut.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-log4j.appender.systemOut.layout.ConversionPattern= %d %5p [%t] (%F:%L) - %m%n
+log4j.appender.error.layout.ConversionPattern= %d %5p [%t] (%F:%L) - %m%n
