--- a/pattern-tutor/pattern-tutor-syntax/pom.xml
+++ b/pattern-tutor/pattern-tutor-syntax/pom.xml
@@ -39,5 +39,20 @@
 	        <artifactId>jmh-generator-annprocess</artifactId>
 	        <version>1.19</version>
 	    </dependency>
+	    <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-jdbc</artifactId>
+            <version>2.3.2</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jetty-all</artifactId>
+                    <groupId>org.eclipse.jetty.aggregate</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jetty-util</artifactId>
+                    <groupId>org.mortbay.jetty</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 	</dependencies>
 </project>
