--- a/pattern-tutor/pattern-tutor-syntax/pom.xml
+++ b/pattern-tutor/pattern-tutor-syntax/pom.xml
@@ -54,5 +54,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--dns地址解析工具包-->
+		<!-- <dependency>
+		   <groupId>dnsjava</groupId>
+		   <artifactId>dnsjava</artifactId>
+		   <version>2.1.8</version>
+		</dependency> -->
 	</dependencies>
 </project>
