resolve sql parser issue.

--- a/pattern-tutor/pom.xml
+++ b/pattern-tutor/pom.xml
@@ -24,7 +24,7 @@
 		<module>pattern-tutor-springmvc</module>
 		<module>pattern-tutor-syntax</module>
 		<module>pattern-tutor-netty</module>
-		<module>pattern-tutor-mysql</module>
+		<module>pattern-tutor-database</module>
 		<module>pattern-tutor-microservice</module>
 		<module>pattern-tutor-flink</module>
 	</modules>
