--- a/pattern-tutor/pattern-tutor-syntax/pom.xml
+++ b/pattern-tutor/pattern-tutor-syntax/pom.xml
@@ -60,5 +60,16 @@
 		   <artifactId>dnsjava</artifactId>
 		   <version>2.1.8</version>
 		</dependency> -->
+		
+		<!-- <dependency>
+		    <groupId>com.cronutils</groupId>
+		    <artifactId>cron-utils</artifactId>
+		    <version>9.0.2</version>
+		</dependency> -->
+		<dependency>
+		    <groupId>cn.hutool</groupId>
+		    <artifactId>hutool-cron</artifactId>
+		    <version>5.2.2</version>
+		</dependency>
 	</dependencies>
 </project>
